--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,14 @@
 
     <!-- metas -->
     <meta charset="utf-8">
-    <meta name="author" content="Website Layout">
+    <meta name="author" content="Egy-Solutions">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="Coworking & Office Space HTML Template">
-    <meta name="description" content="Acowork - Coworking & Office Space HTML Template">
+    <meta name="keywords" content="Egy-Solutions">
+    <meta name="description" content="Egy-Solutions">
 
     <!-- title  -->
-    <title>Acowork - Coworking & Office Space HTML Template</title>
+    <title>Egy-Solutions</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/logos/favicon.png">
