--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 <img src="img/content/about-05.jpg" alt="...">
                             </div>
                             <div class="exp-box z-index-9">
-                                <span class="display-5 display-sm-2 text-white font-weight-500">5</span>
+                                <span class="display-5 display-sm-2 text-white font-weight-500">4</span>
                                 <h6 class="mb-0 text-white text-uppercase">Years Of Experience</h6>
                             </div>
                         </div>
@@ -215,8 +215,8 @@
                             <p class="mb-1-9"> </p> -->
                             <ul class="list-unstyled mb-1-9 mb-sm-2-9 list-style2">
                                 <li> Offering its services across two main sectors</li>
-                                <li>The individual sector through the “Easy Serve” application. </li>
                                 <li>The corporate sector includes the government sector and the business sector</li>
+                                <li>The individual sector through the “Easy Serve” application. </li>
                             </ul>
                             <!-- <a href="about.html" class="butn secondary md">Read More</a> -->
                         </div>
@@ -238,7 +238,7 @@
                                 <h3 class="mb-0 text-secondary">Our Vision</h3>
                             </div>
                             <div class="card-body p-0 position-relative">
-                                <img src="img/content/feature-01.jpg" alt="..." class="w-100">
+                                <img src="img/vession.jfif" alt="..." class="w-100">
                                 <div class="shape-1"></div>
                                 <div class="shape-2"></div>
                                 <div class="hover-content">
@@ -254,7 +254,7 @@
                                 <h3 class="mb-0 text-secondary">Our Mission</h3>
                             </div>
                             <div class="card-body p-0 position-relative">
-                                <img src="img/content/feature-02.jpg" alt="..." class="w-100">
+                                <img src="img/mission.jfif" alt="..." class="w-100">
                                 <div class="shape-1"></div>
                                 <div class="shape-2"></div>
                                 <div class="hover-content">
@@ -270,7 +270,7 @@
                                 <h3 class="mb-0 text-secondary">Our Goal</h3>
                             </div>
                             <div class="card-body p-0 position-relative">
-                                <img src="img/content/feature-03.jpg" alt="..." class="w-100">
+                                <img src="img/Premium.jfif" alt="..." class="w-100">
                                 <div class="shape-1"></div>
                                 <div class="shape-2"></div>
                                 <div class="hover-content">
@@ -296,7 +296,7 @@
                             </div>
                             <div class="flex-grow-1">
                                 <h4 class="display-15 display-sm-10 mb-3 lh-1"><span class="countup">550</span>+</h4>
-                                <h5 class="mb-0">Project Success</h5>
+                                <h5 class="mb-0">Our Clients</h5>
                             </div>
                         </div>
                     </div>
@@ -343,7 +343,7 @@
             <div class="container">
                 <div class="mb-5 text-center">
                     <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-2 font-weight-700">Our Services</span>
-                    <h2 class="h1 mb-0 text-white">Our Popular Services</h2>
+                    
                 </div>
                 <div class="service-carousel1 owl-carousel owl-theme">
                     <div class="card card-style5 rounded-0">
@@ -353,7 +353,7 @@
                             <p class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">
                                 We offer customized cleaning solutions to ensure your facility remains clean, healthy, and safe for employees. Services include deep cleaning of all areas, rooms, offices, bathrooms, kitchens, carpets, upholstery, curtains, furniture stain removal, and water damage restoration.
                             </p>
-                            <a href="services.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
+                            <a href="service1.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
                     </div>
                     <div class="card card-style5 rounded-0">
@@ -361,7 +361,7 @@
                             <!-- <img src="img/icons/icon-04.png" alt="..." class="mb-1-6"> -->
                             <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary">Cleaning Destinations</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;"> With extensive experience, we remove even the toughest stains safely and quickly using eco-friendly products. Egy Solutions offers professional window cleaning programs tailored to your schedule and budget, utilizing advanced technologies like spider systems, cranes, and platforms. Services are available daily, weekly, monthly, quarterly, or annually.</p>
-                            <a href="services.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
+                            <a href="service2.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
                     </div>
                     <div class="card card-style5 rounded-0">
@@ -369,7 +369,7 @@
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
                             <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary">Maintenance & Finishing Works</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">We provide complete or partial interior finishing and maintenance for homes, villas, shops, and companies, with optional 3D designs tailored to client preferences. We offer various finishing types (Lux, Super Lux, High Ultra) using durable materials across all aspects—electricity, plumbing, insulation, carpentry, ceilings, and more.</p>
-                            <a href="services.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
+                            <a href="service3.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
                     </div>
                     <div class="card card-style5 rounded-0">
@@ -377,7 +377,7 @@
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
                             <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary">Sterilization and Insect Control</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">Our specialized team offers professional, customized solutions to ensure a clean, safe work environment. We provide fast, efficient services with a quick response to emergencies, ensuring business continuity.</p>
-                            <a href="services.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
+                            <a href="service4.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
                     </div>
                     <div class="card card-style5 rounded-0">
@@ -385,7 +385,7 @@
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
                             <h3 class="h5 mb-1-9 w-xl-100"><a href="services.html" class="text-primary">Landscape Services</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">Egy Solutions offers customized and innovative landscape designs, transforming outdoor spaces into attractive environments. With professional execution and strict adherence to timelines and quality, we ensure design accuracy. We also provide regular maintenance to sustain the beauty and freshness of these spaces long-term.</p>
-                            <a href="services.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
+                            <a href="service5.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
                     </div>
                     <div class="card card-style5 rounded-0">
@@ -393,7 +393,7 @@
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
                             <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary">Car Wash Services</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">We offer a convenient on-site car wash service, saving employees time and ensuring vehicles are always clean. Our specialized team is highly trained, delivering professional services with top-quality, internationally approved products for lasting protection and shine</p>
-                            <a href="services.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
+                            <a href="service6.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
                     </div>
                     <div class="card card-style5 rounded-0">
@@ -401,7 +401,7 @@
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
                             <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary"> IT Services</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">We provide on-site IT services directly at your company's location, ensuring minimal downtime and quick resolution of technical issues without disrupting your workflow.</p>
-                            <a href="services.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
+                            <a href="service7.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
                     </div>
                 </div>
@@ -507,7 +507,7 @@
             <div class="container">
                 <div class="mb-1-9 mb-md-5 text-center">
                     <span class="text-muted text-uppercase small letter-spacing-4 d-block mb-3 font-weight-600">OUR FEATURES</span>  
-                    <h2 class="display-22 display-sm-18 display-md-16 display-lg-11 w-lg-50 mx-auto mb-0">Apply Through  <span class="title-sm">EASY SRV</span> APP</h2>
+                    <h2 class="display-22 display-sm-18 display-md-16 display-lg-11 w-lg-50 mx-auto mb-0">Apply Through EASY SRV APP</h2>
                 </div>
                 <div class="row mt-n1-9 align-items-center">
                     <div class="col-lg-6 mt-1-9 ">
