--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <div class="card card-style5 rounded-0">
                         <div class="card-body p-1-9 p-xxl-5">
                             <!-- <img src="img/3021895.png" alt="..." class="mb-1-6"> -->
-                            <h3 class="h5 mb-1-9 w-xl-60"><a href="services.html" class="text-primary">Cleaning Services</a></h3>
+                            <h3 class="h5 mb-1-9 w-xl-60"><a href="service1.html" class="text-primary">Cleaning Services</a></h3>
                             <p class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">
                                 We offer customized cleaning solutions to ensure your facility remains clean, healthy, and safe for employees. Services include deep cleaning of all areas, rooms, offices, bathrooms, kitchens, carpets, upholstery, curtains, furniture stain removal, and water damage restoration.
                             </p>
@@ -359,7 +359,7 @@
                     <div class="card card-style5 rounded-0">
                         <div class="card-body p-1-9 p-xxl-5">
                             <!-- <img src="img/icons/icon-04.png" alt="..." class="mb-1-6"> -->
-                            <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary">Cleaning Destinations</a></h3>
+                            <h3 class="h5 mb-1-9 "><a href="service2.html" class="text-primary">Cleaning Destinations</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;"> With extensive experience, we remove even the toughest stains safely and quickly using eco-friendly products. Egy Solutions offers professional window cleaning programs tailored to your schedule and budget, utilizing advanced technologies like spider systems, cranes, and platforms. Services are available daily, weekly, monthly, quarterly, or annually.</p>
                             <a href="service2.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
@@ -367,7 +367,7 @@
                     <div class="card card-style5 rounded-0">
                         <div class="card-body p-1-9 p-xxl-5">
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
-                            <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary">Maintenance & Finishing Works</a></h3>
+                            <h3 class="h5 mb-1-9 "><a href="service3.html" class="text-primary">Maintenance & Finishing Works</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">We provide complete or partial interior finishing and maintenance for homes, villas, shops, and companies, with optional 3D designs tailored to client preferences. We offer various finishing types (Lux, Super Lux, High Ultra) using durable materials across all aspects—electricity, plumbing, insulation, carpentry, ceilings, and more.</p>
                             <a href="service3.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
@@ -375,7 +375,7 @@
                     <div class="card card-style5 rounded-0">
                         <div class="card-body p-1-9 p-xxl-5">
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
-                            <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary">Sterilization and Insect Control</a></h3>
+                            <h3 class="h5 mb-1-9 "><a href="service4.html" class="text-primary">Sterilization and Insect Control</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">Our specialized team offers professional, customized solutions to ensure a clean, safe work environment. We provide fast, efficient services with a quick response to emergencies, ensuring business continuity.</p>
                             <a href="service4.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
@@ -383,7 +383,7 @@
                     <div class="card card-style5 rounded-0">
                         <div class="card-body p-1-9 p-xxl-5">
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
-                            <h3 class="h5 mb-1-9 w-xl-100"><a href="services.html" class="text-primary">Landscape Services</a></h3>
+                            <h3 class="h5 mb-1-9 w-xl-100"><a href="service5.html" class="text-primary">Landscape Services</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">Egy Solutions offers customized and innovative landscape designs, transforming outdoor spaces into attractive environments. With professional execution and strict adherence to timelines and quality, we ensure design accuracy. We also provide regular maintenance to sustain the beauty and freshness of these spaces long-term.</p>
                             <a href="service5.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
@@ -391,7 +391,7 @@
                     <div class="card card-style5 rounded-0">
                         <div class="card-body p-1-9 p-xxl-5">
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
-                            <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary">Car Wash Services</a></h3>
+                            <h3 class="h5 mb-1-9 "><a href="service6.html" class="text-primary">Car Wash Services</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">We offer a convenient on-site car wash service, saving employees time and ensuring vehicles are always clean. Our specialized team is highly trained, delivering professional services with top-quality, internationally approved products for lasting protection and shine</p>
                             <a href="service6.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
@@ -399,7 +399,7 @@
                     <div class="card card-style5 rounded-0">
                         <div class="card-body p-1-9 p-xxl-5">
                             <!-- <img src="img/icons/icon-05.png" alt="..." class="mb-1-6"> -->
-                            <h3 class="h5 mb-1-9 "><a href="services.html" class="text-primary"> IT Services</a></h3>
+                            <h3 class="h5 mb-1-9 "><a href="service7.html" class="text-primary"> IT Services</a></h3>
                             <p class="text-white opacity7 mb-1-9"class="text-white opacity7 mb-1-9" style="display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">We provide on-site IT services directly at your company's location, ensuring minimal downtime and quick resolution of technical issues without disrupting your workflow.</p>
                             <a href="service7.html" class="text-white">Read More <i class="ti-arrow-right text-primary display-28 ms-2 align-middle"></i></a>
                         </div>
