--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
         <!-- SERVICE
         ================================================== -->
-        <section  class="bg-secondary pb-20">
+        <section id="service" class="bg-secondary pb-20">
             <div class="container">
                 <div class="mb-5 text-center">
                     <span class="text-primary text-uppercase small letter-spacing-4 d-block mb-2 font-weight-700">Our Services</span>
@@ -503,7 +503,7 @@
 
         <!-- FEATURES
         ================================================== -->
-        <section id="service">
+        <section >
             <div class="container">
                 <div class="mb-1-9 mb-md-5 text-center">
                     <span class="text-muted text-uppercase small letter-spacing-4 d-block mb-3 font-weight-600">OUR FEATURES</span>  
