--- a/service3.html
+++ b/service3.html
@@ -75,7 +75,7 @@
                                 <nav class="navbar navbar-expand-lg navbar-light p-0">
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
-                                        <a href="index-2.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
+                                        <a href="index.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
                                         <!-- end logo -->
                                     </div>
 
@@ -110,7 +110,7 @@
                                             </ul> -->
                                         </li>
                                         <li>
-                                            <a href="#service">Service</a>
+                                            <a href="index.html">Service</a>
                                             <!-- <ul>
                                                 <li><a href="workspace.html">Workspace</a></li>
                                                 <li><a href="workspace-details.html">Workspace Details</a></li>
@@ -189,15 +189,11 @@
                             </ul>
                             <p class="w-xxl-95">
                                 </p>
-                            <div class="d-sm-flex">
-                                <div class="pe-sm-2-9 mb-4 mb-sm-0">
-                                    <a href="contact.html" class="butn">Learn More</a>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
-                <div class="card p-1-9 mt-4">
+                <div class="card p-1-9 mt-3">
                     <p>Our finishing services are categorized into three distinct levels: Lux, Super Lux, and High Ultra, each designed to cater to different tastes and budget requirements. We use only the highest-quality, durable materials to ensure longevity and resilience in every project. Our expertise spans all critical aspects of interior work, including:</p>
                     <ul class="list-style3    list-unstyled">
                         <li>Carpentry: Custom carpentry services for all types of woodwork, including cabinetry, doors, windows, and furniture, crafted to the highest standards of craftsmanship.</li>
@@ -205,6 +201,11 @@
                         <li>Flooring: A wide selection of flooring options, including tiles, hardwood, laminate, and vinyl, installed with precision to ensure a flawless finish.</li>
                         <li>Painting and Wall Treatments: Professional painting services with a variety of finishes and techniques, including decorative wall treatments and textures that add character to your interiors.</li>
                     </ul>
+                    <div class="d-sm-flex">
+                        <div class="pe-sm-2-9 mb-4 mb-sm-0">
+                            <a href="contact.html" class="butn">Learn More</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
