--- a/service5.html
+++ b/service5.html
@@ -75,7 +75,7 @@
                                 <nav class="navbar navbar-expand-lg navbar-light p-0">
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
-                                        <a href="index-2.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
+                                        <a href="index.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
                                         <!-- end logo -->
                                     </div>
 
@@ -110,7 +110,7 @@
                                             </ul> -->
                                         </li>
                                         <li>
-                                            <a href="#service">Service</a>
+                                            <a href="index.html">Service</a>
                                             <!-- <ul>
                                                 <li><a href="workspace.html">Workspace</a></li>
                                                 <li><a href="workspace-details.html">Workspace Details</a></li>
@@ -190,15 +190,11 @@
                                     <li>Softscaping: Our horticultural experts carefully select and install a wide variety of plants, trees, and shrubs that are suited to the local climate and soil conditions. We design planting schemes that enhance the visual appeal of your property while promoting biodiversity and sustainability.</li>
                                     
                                 </ul>
-                            <div class="d-sm-flex">
-                                <div class="pe-sm-2-9 mb-4 mb-sm-0">
-                                    <a href="contact.html" class="butn">Learn More</a>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
-                <div class="card p-1-9 mt-4">
+                <div class="card p-1-9 mt-3">
                     <p>Egy Solutions is your partner in creating and maintaining exquisite outdoor spaces that reflect your style and enhance the value of your property. Whether you need a complete landscape transformation or ongoing care for an existing space, our professional and reliable services deliver lasting beauty and functionality.</p>
                     <ul class="list-style3    list-unstyled">
                         <li>Irrigation and Water Management: We design and install efficient irrigation systems that ensure optimal water distribution to all areas of your landscape. Our systems are designed to conserve water while maintaining the health and vibrancy of your plants.</li>
@@ -207,6 +203,11 @@
                         <li>Softscaping: Our horticultural experts carefully select and install a wide variety of plants, trees, and shrubs that are suited to the local climate and soil conditions. We design planting schemes that enhance the visual appeal of your property while promoting biodiversity and sustainability.</li>
                         <li>Irrigation and Water Management: We design and install efficient irrigation systems that ensure optimal water distribution to all areas of your landscape. Our systems are designed to conserve water while maintaining the health and vibrancy of your plants.</li>
                     </ul>
+                    <div class="d-sm-flex">
+                        <div class="pe-sm-2-9 mb-4 mb-sm-0">
+                            <a href="contact.html" class="butn">Learn More</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
