--- a/service7.html
+++ b/service7.html
@@ -75,7 +75,7 @@
                                 <nav class="navbar navbar-expand-lg navbar-light p-0">
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
-                                        <a href="index-2.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
+                                        <a href="index.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
                                         <!-- end logo -->
                                     </div>
 
@@ -110,7 +110,7 @@
                                             </ul> -->
                                         </li>
                                         <li>
-                                            <a href="#service">Service</a>
+                                            <a href="index.html">Service</a>
                                             <!-- <ul>
                                                 <li><a href="workspace.html">Workspace</a></li>
                                                 <li><a href="workspace-details.html">Workspace Details</a></li>
@@ -192,15 +192,11 @@
 
                                     
                                 </ul>
-                            <div class="d-sm-flex">
-                                <div class="pe-sm-2-9 mb-4 mb-sm-0">
-                                    <a href="contact.html" class="butn">Learn More</a>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
-                <div class="card p-1-9 mt-4">
+                <div class="card p-1-9 mt-3">
                     <ul class="list-style3    list-unstyled">
                         <li> Advanced Tools and Software: We utilize the latest tools and software solutions to enhance and maintain your IT infrastructure. Our services include installing and managing cutting-edge antivirus software, implementing secure backup solutions, and monitoring system performance to prevent potential issues before they arise. We also provide software updates and patches to keep your systems secure and running efficiently.</li>
                         <li> Proactive Monitoring and Maintenance: Beyond troubleshooting, we offer proactive monitoring of your IT systems to detect and resolve issues before they impact your business. Our maintenance services include regular system checks, network health assessments, and performance optimization to ensure your technology is always up to date and functioning at its best.</li>
@@ -208,6 +204,11 @@
                         <li> Tailored IT Solutions: We understand that every business has unique IT needs. That’s why we offer customized IT solutions tailored to your specific requirements. Whether you need support for a small office network or a complex enterprise-level infrastructure, our team works closely with you to develop a strategy that aligns with your business goals.</li>
                         <li> Security and Compliance: In today’s digital age, security is paramount. We implement robust security measures to protect your data and ensure compliance with industry regulations. Our services include firewall setup, data encryption, and secure access controls to safeguard your sensitive information.</li>
                     </ul>
+                    <div class="d-sm-flex">
+                        <div class="pe-sm-2-9 mb-4 mb-sm-0">
+                            <a href="contact.html" class="butn">Learn More</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
