--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="navbar-default border-bottom border-color-light-white">
 
                 <!-- start top search -->
-                <div class="top-search bg-primary">
+                <!-- <div class="top-search bg-primary">
                     <div class="container-fluid px-lg-1-6 px-xl-2-5 px-xxl-2-9">
                         <form class="search-form" action="https://acoworkhtml.websitelayout.net/search.html" method="GET" accept-charset="utf-8">
                             <div class="input-group">
@@ -64,7 +64,7 @@
                             </div>
                         </form>
                     </div>
-                </div>
+                </div> -->
                 <!-- end top search -->
 
                 <div class="container-fluid px-lg-1-6 px-xl-2-5 px-xxl-2-9">
@@ -74,7 +74,7 @@
                                 <nav class="navbar navbar-expand-lg navbar-light p-0">
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
-                                        <a href="index-2.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
+                                        <a href="index.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
                                         <!-- end logo -->
                                     </div>
 
@@ -83,7 +83,7 @@
                                     <!-- menu area -->
                                     <ul class="navbar-nav ms-auto" id="nav" style="display: none;">
                                         <li>
-                                            <a href="#!">Home</a>
+                                            <a href="index.html">Home</a>
                                             <!-- <ul>
                                                 <li><a href="index-2.html">Home 01</a></li>
                                                 <li><a href="index-02.html">Home 02</a></li>
