--- a/service2.html
+++ b/service2.html
@@ -75,7 +75,7 @@
                                 <nav class="navbar navbar-expand-lg navbar-light p-0">
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
-                                        <a href="index-2.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
+                                        <a href="index.html" class="navbar-brand logochange"><img id="logo" src="img/logo.png" alt="logo"></a>
                                         <!-- end logo -->
                                     </div>
 
@@ -110,7 +110,7 @@
                                             </ul> -->
                                         </li>
                                         <li>
-                                            <a href="#service">Service</a>
+                                            <a href="index.html">Service</a>
                                             <!-- <ul>
                                                 <li><a href="workspace.html">Workspace</a></li>
                                                 <li><a href="workspace-details.html">Workspace Details</a></li>
