--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                                 <img src="img/icons/icon-23.png" alt="...">
                             </div>
                             <div class="flex-grow-1">
-                                <h4 class="display-15 display-sm-10 mb-3 lh-1"><span class="countup">45</span>+</h4>
-                                <h5 class="mb-0">Room Available</h5>
+                                <h4 class="display-15 display-sm-10 mb-3 lh-1"><span class="countup">10</span>+</h4>
+                                <h5 class="mb-0">Places</h5>
                             </div>
                         </div>
                     </div>
