--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                                 <img src="img/icons/icon-21.png" alt="...">
                             </div>
                             <div class="flex-grow-1">
-                                <h4 class="display-15 display-sm-10 mb-3 lh-1"><span class="countup">120</span>+</h4>
-                                <h5 class="mb-0">Available Spaces</h5>
+                                <h4 class="display-15 display-sm-10 mb-3 lh-1"><span class="countup">45</span>+</h4>
+                                <h5 class="mb-0">Our Services</h5>
                             </div>
                         </div>
                     </div>
@@ -317,8 +317,8 @@
                                 <img src="img/icons/icon-22.png" alt="...">
                             </div>
                             <div class="flex-grow-1">
-                                <h4 class="display-15 display-sm-10 mb-3 lh-1"><span class="countup">415</span>+</h4>
-                                <h5 class="mb-0">Happy Clients</h5>
+                                <h4 class="display-15 display-sm-10 mb-3 lh-1"><span class="countup">10000</span>+</h4>
+                                <h5 class="mb-0">App Download</h5>
                             </div>
                         </div>
                     </div>
