--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 <img src="img/icons/icon-22.png" alt="...">
                             </div>
                             <div class="flex-grow-1">
-                                <h4 class="display-15 display-sm-10 mb-3 lh-1"><span class="countup">10000</span>+</h4>
+                                <h4 class="display-15 display-sm-10 mb-3 lh-1"><span class="countup">10</span><span>K</span>+</h4>
                                 <h5 class="mb-0">App Download</h5>
                             </div>
                         </div>
